@@ -1,3 +1,8 @@
+Tue Mar  8 00:42:22 2016  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* ruby.c (warn_cr_in_shebang): meaningless check on DOSISH platforms.
+	  fixed a test failure introduced at r53998.
+
 Tue Mar  8 00:27:53 2016  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>
 
 	* ext/tk/lib/tkextlib/tcllib/tablelist_tile.rb: fix method name typo.
